# contact_motion_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/contact_motion_planner/: contact_model_graph.h  contact_planner.h  fcl_eigen_utils.h  planning_scene.h
include/contact_motion_planner/contact/: contact.h  face_contact.h
include/contact_motion_planner/contact_model/: box_contact_model.h  contact_model.h
include/contact_motion_planner/contact_model/visualization/: contact_model_visualization.h
include/contact_motion_planner/robot_dynamics/: dexterous_robot_model.h  robot_dynamics_model.h
include/contact_motion_planner/solver/: contact_optimization.h  contact_optimization_solver.h
include/contact_motion_planner/solver/constraint/: constraint_base.h  constraint_equality.h  constraint_inequality.h
src/: contact_model_graph.cpp  contact_planner.cpp  example.cpp  planning_scene.cpp
src/contact/: contact.cpp
src/contact_model/: box_contact_model.cpp  contact_model.cpp
src/contact_model/visualization/: contact_model_visualization.cpp
src/robot_dynamics/: robot_dynamics_model.cpp
src/solver/: contact_optimization.cpp  contact_optimization_solver.cpp
src/solver/constraint/: constraint_base.cpp  constraint_equality.cpp  constraint_inequality.cpp
test/: utest.cpp
